seccion 5: CORS y CSRF